--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="middle-section">
             <div class="middle-box">
                 <h2>Gallery</h2>
-                <img src="https://www.example.com/image.jpg" alt="Victoria Memorial" class="gallery-image">
+                <img src="Victoria_Memorial_situated_in_Kolkata.jpg" class="gallery-image">
             </div>
             <div class="middle-box">
                 <h2>Notices</h2>
