--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
                 <a href="https://www.youtube.com/watch?v=example" target="_blank">
                     <img src="https://i.ytimg.com/vi/QH2-TGUlwu4/hqdefault.jpg" alt="YouTube Video" class="video-thumbnail">
                 </a>
-            </div>
-            <div class="footer-pane google-map">
-                <h3>Find Us</h3>
-                <a href="https://goo.gl/maps/xyz" target="_blank">
-                    <img src="https://maps.gstatic.com/tactile/pane/default6.png" alt="Google Maps Thumbnail" class="map-thumbnail">
-                </a>
-            </div>
+                 </div>
+                   <div class="footer-pane">
+                    <h3>FIND US</h3>
+                    <img src="qr_code.png" alt="QR Code" class="qr-code">
+                    <p>Scan the QR code for location details!</p>
+                    <a href="https://example.com/location" target="_blank">Click here for details</a>
+                </div>
+
         </div>
         <p>&copy; 2024 Victoria Memorial. All Rights Reserved.</p>
     </footer>
