--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                  </div>
                    <div class="footer-pane">
                     <h3>FIND US</h3>
-                    <img src="qr_code.png" alt="QR Code" class="qr-code">
+                    <img src="QR.png" alt="QR Code" class="qr-code">
                     <p>Scan the QR code for location details!</p>
                     <a href="https://example.com/location" target="_blank">Click here for details</a>
                 </div>
