--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                     <img src="https://i.ytimg.com/vi/QH2-TGUlwu4/hqdefault.jpg" alt="YouTube Video" class="video-thumbnail">
                 </a>
                  </div>
-                   <div class="footer-pane">
+                       <div class="footer-pane">
                     <h3>FIND US</h3>
                     <img src="QR.png" alt="QR Code" class="qr-code">
-                    <p>Scan the QR code for location details!</p>
+                    <p>Scan the QR code for details!</p>
                     <a href="https://example.com/location" target="_blank">Click here for details</a>
                 </div>
 
