--- a/library.html
+++ b/library.html
@@ -126,12 +126,12 @@
                     <img src="https://i.ytimg.com/vi/QH2-TGUlwu4/hqdefault.jpg" alt="YouTube Video" class="video-thumbnail">
                 </a>
                  </div>
-                   <div class="footer-pane">
-                    <h3>FIND US</h3>
-                    <img src="qr_code.png" alt="QR Code" class="qr-code">
-                    <p>Scan the QR code for location details!</p>
-                    <a href="https://example.com/location" target="_blank">Click here for details</a>
-                </div>
+                    <div class="footer-pane">
+                <h3>FIND US</h3>
+                <img src="QR.png" alt="QR Code" class="qr-code">
+                <p>Scan the QR code for details!</p>
+                <a href="https://example.com/location" target="_blank">Click here for details</a>
+            </div>
 
         </div>
         <p>&copy; 2024 Victoria Memorial. All Rights Reserved.</p>
